--- a/application-dev.yml
+++ b/application-dev.yml
@@ -15,8 +15,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
   redis:    
     host: localhost
     port: 6379
